ui/src/components/assets/style/navbar.css
.navbar {
    background-color: #333;
    top: 0;
    position: -webkit-sticky;
    position: sticky;
    height: 50px;
    z-index: 1;
    border-radius: 8px;
    border-color: #abb2bf;
    border-style: solid;
}

.navbar a {
    font-size: 20px;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.dropdown {
    float: left;
}

.dropdown .dropbtn {
    font-size: 20px;
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
}

.snippet {
    display: inline-block;
}

.navbar a:hover, .dropdown:hover .dropbtn {
    background-color: #abb2bf;
    color: black;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #abb2bf;
    min-width: 160px;
    box-shadow: 0px 0px 4px 0px #abb2bf;
    z-index: 1;
    padding-top: 2px;
}

.dropdown-content .statement {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    text-align: left;
    font-size: 20px;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.statement:hover {
    color: #abb2bf;
    background-color: #282c34;
    white-space: pre-wrap;
}

#download-btn {
    float: right
}

#title {
    font-size: 20px;
    color: white;
    text-align: center;
    padding: 14px 16px;
    position: absolute;
    left: 0;
    right: 0;
    z-index: -1;
    cursor: default;
}

.code {
    display: flex;
    align-items: center;
}

#copy-btn {
    margin-left: 24px;
}

